@@ -33,6 +33,7 @@ sub process($$$) {
     $vars->{'topic_description'} = "";
     $vars->{'topic_title'} = $http_input->get('topic_title');
     $vars->{'bug_ids'} = $http_input->get('bug_ids');
+    $vars->{'states'} = \@Codestriker::topic_states;
     $vars->{'feedback'} = $http_input->get('feedback');
     $vars->{'default_to_head'} = "";
     
