@@ -195,7 +195,7 @@ function DeleteTopicConfirm()
 <tr class="tt1">
  <td>State:
    <FONT SIZE="-2"><A HREF="javascript:alert('
-When a topic is created, it is initialised in state \'open\'.\n
+When a topic is created, it is by default in state \'open\'.\n
 Once a topic has been reviewed, and the code has been committed,\n
 the state should be updated to \'committed\'.  If the code\n
 in this review is not to be committed, perhaps because a\n
